# deduper

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  azure-pipelines.yml  readme.md
.github/workflows/: release.yml  test.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/testdirs/two_ident_files/: a.txt
