[package]
name = "dedupe"
version = "3.2.1"
authors = ["Justin Lambert <mastfish@gmail.com>"]
publish = false
edition = "2021"
default-run = "cli"

[profile.release]
lto = "thin"

[dependencies]
walkdir = "2"
rayon = "1"
seahash = "4"
clap = { version = "4.4.2", features = ["derive"] }
[lib]
name = "dupelib"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "my_benchmark"
harness = false

